# workflow-conductor

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  devbox.json  final-plan.md  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example  pyproject.toml
docs/: implementation-plan.md  upstream-vs-conductor-comparison.md
local/: kind-config-1n.yaml  kind-config-3n.yaml
local/k3s/: config.yaml  version.yaml
src/workflow_conductor/: __init__.py  app.py  cli.py  config.py  models.py  retry.py
src/workflow_conductor/k8s/: __init__.py  cluster.py  helm.py  kubectl.py  values.py
src/workflow_conductor/phases/: __init__.py  approval.py  completion.py  data_preparation.py  deployment.py  generation.py  monitoring.py  planning.py  provisioning.py  routing.py  validation.py
src/workflow_conductor/ui/: __init__.py  display.py  prompts.py
tests/: conftest.py
tests/e2e/: cases.py  conftest.py  report.py  test_full_pipeline.py  test_output_verification.py
tests/integration/: conftest.py  test_completion_scenarios.py  test_k8s_deploy.py  test_monitoring_sentinel.py  test_phase_chain.py  test_workflow_inject.py
tests/unit/: test_approval.py  test_cli.py  test_config.py  test_data_preparation.py  test_demo.py  test_deployment.py  test_display.py  test_generation.py  test_helm.py  test_helm_values.py  test_kubectl.py  test_models.py  test_monitoring.py  test_phases.py  test_pipeline.py  test_planning.py  test_prompts.py  test_provisioning.py  test_retry.py
