[project]
name = "workflow-conductor"
version = "0.1.0"
description = "AI-powered orchestrator for 1000 Genomes workflows on Kubernetes via HyperFlow WMS"
requires-python = ">=3.11"
dependencies = [
    "mcp-agent[anthropic]>=0.2.6",
    "mcp[cli]>=1.0.0",
    "click>=8.1",
    "rich>=13.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
google = ["mcp-agent[google]>=0.2.6"]
temporal = ["mcp-agent[temporal]>=0.2.6"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.2",
    "ruff>=0.9",
    "mypy>=1.14",
    "types-PyYAML>=6.0",
]
all = ["workflow-conductor[google,temporal,dev]"]

[project.scripts]
workflow-conductor = "workflow_conductor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_conductor"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"
packages = ["workflow_conductor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
